--- a/ui-list.html
+++ b/ui-list.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="./static/css/frozen-debug.css" />
     
 <style type="text/css">
-.handy-module{
+.frozen-module{
   margin: 20px 0 50px;
 }
-.handy-module-content{
+.frozen-module-content{
   padding: 20px 0 50px;
 }
-.handy-module-content h3{
+.frozen-module-content h3{
   margin: 40px 0 20px;
 }
 .highlight{
@@ -32,9 +32,9 @@
 <body>
 <div id="body-wrapper">
 
-<article class="handy-module">
-  <h1 class="handy-module-title">ui-list</h1>
-  <div class="handy-module-content">
+<article class="frozen-module">
+  <h1 class="frozen-module-title">ui-list</h1>
+  <div class="frozen-module-content">
   <h3 id="文字普通列表">文字普通列表</h3><div class="nico-insert-code">
       <ul class="ui-list-text ui-border-tb">
         <li class="ui-border-top">
