--- a/ui-tips.html
+++ b/ui-tips.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="./static/css/frozen-debug.css" />
     
 <style type="text/css">
-.handy-module{
+.frozen-module{
   margin: 20px 0 50px;
 }
-.handy-module-content{
+.frozen-module-content{
   padding: 20px 0 50px;
 }
-.handy-module-content h3{
+.frozen-module-content h3{
   margin: 40px 0 20px;
 }
 .highlight{
@@ -32,9 +32,9 @@
 <body>
 <div id="body-wrapper">
 
-<article class="handy-module">
-  <h1 class="handy-module-title">ui-tips</h1>
-  <div class="handy-module-content">
+<article class="frozen-module">
+  <h1 class="frozen-module-title">ui-tips</h1>
+  <div class="frozen-module-content">
   <h3 id="default">default</h3><div class="nico-insert-code"><div class="ui-tips">
       <div class="tips-cont">
         <i class="ui-icon icon-info"></i>当前网路不可用，请检查你的网路设置。
